--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.5.10'
+    id 'org.jetbrains.kotlin.jvm' version '2.1.20'
 }
 
 group 'info.krogulec'
@@ -11,10 +11,14 @@ repositories {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
-    implementation 'org.junit.jupiter:junit-jupiter:5.7.0'
-    implementation("org.jetbrains.kotlin:kotlin-reflect:1.6.21")
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.13.1'
+    implementation("org.jetbrains.kotlin:kotlin-reflect:2.1.20")
 }
 
 tasks.test {
     useJUnitPlatform()
+}
+
+kotlin {
+    jvmToolchain(21)
 }
